#314 Centered content in service section - Add meda query for large screen, and centered content if screen has more 1920px. - Add services.jml file with text for services-slideshow. - Change arrows position in service on tablet, fix about visible number of slide and change arrow space betven. - Change height posts wection - Also fix height service slide on iphone 5 and change wave in lets talk section

--- a/_assets/css/base/_general.scss
+++ b/_assets/css/base/_general.scss
@@ -132,9 +132,6 @@ p {
   @media screen and ($b_tablet) {
     padding: 0 40px;
   }
-  @media screen and (max-width: 359px) {
-    padding: 0 15px;
-  }
 }
 .tbl {
   display: table;
@@ -164,14 +161,14 @@ p {
   display: none;
 }
 .mobile-show {
-  display: none;
+  display: none !important;
     @media screen and (max-width: 767px) {
-      display: block;
+      display: block !important;
   }
 }
 .mobile-hide {
   @media screen and (max-width: 767px) {
-    display: none;
+    display: none !important;
   }
 }
 .logo {
