--- a/_assets/css/layout/_use-cases.scss
+++ b/_assets/css/layout/_use-cases.scss
@@ -166,25 +166,25 @@
   font-size: 0;
   line-height: 0;
   border: none;
-  width: 28px;
-  height: 15px;
+  width: 48px;
+  height: 45px;
   bottom: 40px;
   z-index: 2;
   background: none;
 }
 
 .uses-cases-slideshow .slick-prev {
-  left: 40px;
+  left: 30px;
   @include rotate(180deg);
   &:before {
     content: '';
     z-index: 2;
     position: absolute;
-    width: 100%;
+    width: 28px;
     height: 1px;
     background: #fff;
-    right: 0;
-    top: 7px;
+    right: 10px;
+    top: 22px;
     @include transition(0.3s);
   }
   &:after {
@@ -193,8 +193,8 @@
     position: absolute;
     width: 10px;
     height: 10px;
-    right: 0;
-    top: 2px;
+    right: 10px;
+    top: 17px;
     border: solid #fff;
     border-width: 0 1px 1px 0;
     @include rotate(-45deg);
@@ -203,16 +203,16 @@
 }
 
 .uses-cases-slideshow .slick-next {
-  left: 90px;
+  left: 80px;
   &:before {
     content: '';
     z-index: 2;
     position: absolute;
-    width: 100%;
+    width: 28px;
     height: 1px;
     background: #fff;
-    right: 0;
-    top: 7px;
+    right: 10px;
+    top: 22px;
     @include transition(0.3s);
   }
   &:after {
@@ -221,8 +221,8 @@
     position: absolute;
     width: 10px;
     height: 10px;
-    right: 0;
-    top: 2px;
+    right: 10px;
+    top: 17px;
     border: solid #fff;
     border-width: 0 1px 1px 0;
     @include rotate(-45deg);
