--- a/_assets/css/media/_tablet.scss
+++ b/_assets/css/media/_tablet.scss
@@ -13,17 +13,19 @@
     right: -21px;
   }
   .services .col .holder {
-    padding: 0 40px;
+    padding: 0 80px;
     margin: 0;
     max-width: 100%;
+    min-height: 240px;
   }
   .services .col+.col .holder {
-    padding: 0 40px;
+    padding: 0 80px;
     margin: 0;
   }
   .services__description {
     display: block;
     margin: 0 auto;
+    max-width: 100%;
   }
   .services__title {
     font-size: 30px;
@@ -33,8 +35,11 @@
     font-size: 28px;
     line-height: 34px;
   }
+  .services-slideshow-current-slide {
+    right: 80px;
+  }
   .services-slideshow-controls {
-    left: 40px;
+    left: 70px;
   }
   .uses-cases-controls {
    padding: 50px 0;
